move internal helper methods up here

--- a/pom.xml
+++ b/pom.xml
@@ -105,6 +105,12 @@
       <version>1.5.6</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.jetbrains</groupId>
+      <artifactId>annotations</artifactId>
+      <version>13.0</version>
+    </dependency>
+
   </dependencies>
 
 </project>
