--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
   <modules>
     <module>commons</module>
     <module>commons_alerts</module>
+    <module>commons_concurrent</module>
   </modules>
 
   <scm>
