--- a/commons/pom.xml
+++ b/commons/pom.xml
@@ -3,7 +3,7 @@
 
   <parent>
     <groupId>com.liveramp</groupId>
-    <artifactId>pom-common</artifactId>
+    <artifactId>commons_parent</artifactId>
     <version>1.1-SNAPSHOT</version>
   </parent>
 
