--- a/.travis.yml
+++ b/.travis.yml
@@ -9,12 +9,22 @@ env:
   - secure: dpVW8q54tISynjhR8PbdfiSZBtV51PCoHb1syhFM3bMGpVPi3xsOswzS/HvnIpYUj/b9avoxBDQb3VJ2rkooaVxDsBRHN/nSRmEfQFnnitMvpwPG0u5j+M4fxZZPpP15Xz4hxRi7MeCGtQtyUIOjH+JUJtCjL08gHKzfcaFXEGg=
   - secure: L/R+bMRMlsQgNTJt2IzK4ARr7z9qloTVAHOvL/wgRuAwOhd2zfqt5X6u9++hKbCu8n4uVNeHX7KVmDSWDX81dLGmq1CeY5+g7fVmHYDr21d7oalC0g14kbtXiy2uxIigekemza78XUpQFse3l7PlDNTLh2H6/SIEsASnDHO+Z8g=
   - secure: DhT25O8zgHwCTFB8qaJTEIgZ1N1pytEZpYvljJOEo9KSfGy/CakBJeKEJGMz6aApn4Iz8uEOljiTl+NqfU00XANBRtS8IuO8y9Pu9wUWgtL6HZh1MOKDZsw+I6LQxcfjQnoCktoHV6JpB/dc12qP3j8moxw1PR8qY+UbGrYyhyU=
+install: "/bin/true"
+script:
+- "./test"
 before_deploy:
 - openssl aes-256-cbc -K $encrypted_917f16f2e986_key -iv $encrypted_917f16f2e986_iv
   -in .travis/gpg.asc.enc -out .travis/gpg.asc -d
 deploy:
+-
   skip_cleanup: true
-  on:
-    branch: master
   provider: script
   script: ./deploy
+  on:
+    branch: master
+-
+  skip_cleanup: true
+  provider: script
+  script: ./deploy
+  on:
+    tags: true
