--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,7 @@
     <tag>HEAD</tag>
   </scm>
 
+  <groupId>com.liveramp</groupId>
   <artifactId>commons_parent</artifactId>
   <version>1.1-SNAPSHOT</version>
   <packaging>pom</packaging>
